; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_vt_utils.c_cvpxpic_destroy_mapped_ro_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_vt_utils.c_cvpxpic_destroy_mapped_ro_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvpxpic_ctx = type { i32 }

@kCVPixelBufferLock_ReadOnly = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @cvpxpic_destroy_mapped_ro_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cvpxpic_destroy_mapped_ro_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.cvpxpic_ctx*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.cvpxpic_ctx*
  store %struct.cvpxpic_ctx* %5, %struct.cvpxpic_ctx** %3, align 8
  %6 = load %struct.cvpxpic_ctx*, %struct.cvpxpic_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.cvpxpic_ctx, %struct.cvpxpic_ctx* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @kCVPixelBufferLock_ReadOnly, align 4
  %10 = call i32 @CVPixelBufferUnlockBaseAddress(i32 %8, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @cvpxpic_destroy_cb(i32* %11)
  ret void
}

declare dso_local i32 @CVPixelBufferUnlockBaseAddress(i32, i32) #1

declare dso_local i32 @cvpxpic_destroy_cb(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
